--- a/contact-us.html
+++ b/contact-us.html
@@ -114,6 +114,7 @@
         </footer>
     
     </main>
-    
+    <script src="./resources/js/index.js"></script>
+    <script src="./resources/js/validation.js"></script>
 </body>
 </html>
