--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/resources/css/style.css">
 </head>
 <body>
-    
+ 
     <!-- NAV SECTION -->
     <div id="navbar">
         <nav>
@@ -273,5 +273,7 @@
               </div>
         </footer>
     </main>
+    <script src="./resources/js/index.js"></script>
+    <script src="./resources/js/validation.js"></script>
 </body>
 </html>
