--- a/project.html
+++ b/project.html
@@ -88,25 +88,7 @@
             <div class="title">
                 <h2>Other Projects</h2>
             </div>
-            <div class="projects-container"><div class="project">
-                <img src="./resources/images/projects-section/1.jpg" alt="" />
-                <h3>Simplify</h3>
-                <p>UI Design & App Development</p>
-                <a href="#">Learn More</a>
-              </div>
-              <div class="project">
-                <img src="./resources/images/projects-section/2.jpg" alt="" />
-                <h3>Dashcoin</h3>
-                <p>Web Development</p>
-                <a href="#">Learn More</a>
-              </div>
-              <div class="project">
-                <img src="./resources/images/projects-section/3.jpg" alt="" />
-                <h3>Vectorify</h3>
-                <p>User Experience Design</p>
-                <a href="#">Learn More</a>
-              </div>
-            </div>
+            <div class="projects-container"></div>
           </section>
 
     <!-- SECTION HELP -->
@@ -144,5 +126,7 @@
             </div>
         </footer>
     </main>
+    <script src="./resources/js/index.js"></script>
+    <script src="./resources/js/validation.js"></script>
 </body>
 </html>
