--- a/contact-us.html
+++ b/contact-us.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+
+  <div class="loader-container">
+    <div class="loader"></div>
+  </div>
+  
+
     <!-- NAV SECTION -->
     <div id="navbar">
         <nav>
@@ -114,7 +120,10 @@
         </footer>
     
     </main>
+    
     <script src="./resources/js/index.js"></script>
     <script src="./resources/js/validation.js"></script>
-</body>
+    <script src="./resources/js/loader.js"></script>
+
+  </body>
 </html>
