--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
  
+  <!-- LOADER -->
+  <div class="loader-container">
+    <div class="loader"></div>
+  </div>
+  
+
     <!-- NAV SECTION -->
     <div id="navbar">
         <nav>
@@ -254,7 +260,10 @@
               </div>
         </footer>
     </main>
+    
     <script src="./resources/js/index.js"></script>
     <script src="./resources/js/validation.js"></script>
-</body>
+    <script src="./resources/js/loader.js"></script>
+
+  </body>
 </html>
